--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ nav a{
     text-decoration: none; 
     padding: 0 30px; 
     font-family: sans-serif;
+    border-radius: 5px;
+    padding: 30px;
 }
 
 main{
